--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,8 @@
-- name: Purge jsDelivr cache
-  uses: gacts/purge-jsdelivr-cache@v1.0.1
+jobs:
+  purge-jsdelivr-cache:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: gacts/purge-jsdelivr-cache@v1
+        with:
+          url: |
+            https://cdn.jsdelivr.net/gh/NischalChenna/lit-cdn-test@1.1.0/lit-test.js
